# Q-agent

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  download_mmproj.ps1  start.bat
changelog/: 2026-05-15_agent-loop.md  2026-05-15_claude-code-integration.md  2026-05-15_documentation.md  2026-05-15_initial-setup.md  2026-05-15_memory-system.md  2026-05-15_ocr-integration.md  2026-05-15_web-panel.md  2026-05-16-code-quality-scan.md  2026-05-16_at-mention-claude-progress.md  2026-05-16_banner-alignment.md  2026-05-16_batch-merge-antihallucination.md  2026-05-16_claude-ansi-progress.md  2026-05-16_claude-code-maxiter.md  2026-05-16_claude-progress.md  2026-05-16_claude-stream-progress.md  2026-05-16_claude-termination.md  2026-05-16_claude-timeout-queue.md  2026-05-16_cleanup-unused.md  2026-05-16_colored-banner.md  2026-05-16_context-notify.md  2026-05-16_context-summary.md  2026-05-16_exclusion-list.md  2026-05-16_fake-tool-execution.md  2026-05-16_fix-banner-v2.md  2026-05-16_fix-banner.md  2026-05-16_fix-schedule-time.md  2026-05-16_git-init.md  2026-05-16_history-persist.md  2026-05-16_ignore-others-at.md  2026-05-16_log-truncation.md  2026-05-16_notify-duration.md  2026-05-16_ocr-dispatcher-fix.md  2026-05-16_ocr-path-fix.md  2026-05-16_ocr-tessdata-fix.md  2026-05-16_priority-queue.md  2026-05-16_prompt-simplify-progress-fix.md  2026-05-16_qagent-banner.md  2026-05-16_readme-github.md  2026-05-16_remove-hardcoded-paths.md  2026-05-16_schedule-auto-create.md  (+17 more)
docs/: architecture.md  code-quality-report.md  dev-history.md  index.html  issue-list-full.md  (+4 more)
(+32 files in other folders)
